--- a/scripts/package.json
+++ b/scripts/package.json
@@ -15,5 +15,10 @@
     "homepage": "https://github.com/QVote/QVoteZilliqaContract#readme",
     "dependencies": {
         "@zilliqa-js/zilliqa": "^2.1.0"
+    },
+    "devDependencies": {
+        "ts-node": "^9.1.1",
+        "tslib": "^2.1.0",
+        "typescript": "^4.1.3"
     }
 }
