--- a/scripts/package.json
+++ b/scripts/package.json
@@ -14,9 +14,11 @@
     },
     "homepage": "https://github.com/QVote/QVoteZilliqaContract#readme",
     "dependencies": {
-        "@zilliqa-js/zilliqa": "^2.1.0"
+        "@zilliqa-js/zilliqa": "^2.1.0",
+        "node-fetch": "^2.1.2"
     },
     "devDependencies": {
+        "@types/node-fetch": "^2.5.8",
         "ts-node": "^9.1.1",
         "tslib": "^2.1.0",
         "typescript": "^4.1.3"
