Add out dir to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -160,4 +160,7 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,linux,node
+# End of https://www.toptal.com/developers/gitignore/api/macos,linux,node\
+
+
+out
